adding cashe and rework update of api
